--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-color": "^2.19.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-print-components": "^1.0.4",
+    "react-qr-code": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
