--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Stellavilar.github.io/sav-connect-client",
+  "homepage": "http://Stellavilar.github.io/sav-connect-client",
   "name": "savc",
   "version": "0.1.0",
   "private": true,
